--- a/index.html
+++ b/index.html
@@ -26,6 +26,52 @@
           </ul>
         </div>
       </nav>
+
+      <!--infomation section-->
+      <div class="information">
+        <div class="overlay"></div>
+        <img src="./images/pc.png" class="pc" />
+        <div id="circle">
+          <div class="feature one">
+            <img src="./images/camera.png" alt="" />
+            <div>
+              <h1>Camera</h1>
+              <p>Beautiful lens.</p>
+            </div>
+          </div>
+          <div class="feature two">
+            <img src="./images/processor.png" alt="" />
+            <div>
+              <h1>Processor</h1>
+              <p>Processor is very important.</p>
+            </div>
+          </div>
+          <div class="feature three">
+            <img src="./images/battery.png" alt="" />
+            <div>
+              <h1>Battery</h1>
+              <p>Battery is Powerful.</p>
+            </div>
+          </div>
+          <div class="feature four">
+            <img src="./images/display.png" alt="" />
+            <div>
+              <h1>Display</h1>
+              <p>Beautiful display.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!--control section-->
+      <div class="control">
+        <img src="./images/arrow.png" id="upBtn" />
+        <h3>Feature</h3>
+        <img src="./images/arrow.png" id="downBtn">
+      </div>
     </div>
+
+
+    <script  src="./app.js"></script>
   </body>
 </html>
